[gd_scene load_steps=3 format=3 uid="uid://jmdlre1eng6x"]

[ext_resource type="Script" path="res://login.gd" id="1_nj0k2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_el1d2"]

[node name="Login" type="PanelContainer"]
script = ExtResource("1_nj0k2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_el1d2")

[node name="EmailLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Email:"
horizontal_alignment = 1

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
clear_button_enabled = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_el1d2")

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Password:"
horizontal_alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
clear_button_enabled = true
secret = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_el1d2")

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_el1d2")

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_el1d2")

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="RegisterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Register"
